--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-*.*
-main
+.DS_Store
+.idea
+.clj-kondo
+.lsp
+
+Cargo.toml
+Cargo.lock
 target
-!*.go
-!*.rs
-!*.clj
-!.gitignore
-!Readme.md
+
+go.mod
+go.sum
